--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "gh-pages": "gh-pages -d dist"
   },
+  "homepage": "https://ggrus.github.io/hh-hw-ajax/",
   "devDependencies": {
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "8.29.0",
